style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light;
  color: #083D77;
  background-color: #F7F7FF;
  /* color-scheme: light dark; */
  /* color: rgba(255, 255, 255, 0.87); */
  /* background-color: #242424; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  flex-direction: column;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}

.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

.logo.vanilla:hover {
  filter: drop-shadow(0 0 2em #f7df1eaa);
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.btn {
  /* font-family: 'Libre Franklin', sans-serif; */
  padding: 0.6em 1.2em;
  border-radius: 8px;
  /*Montserrat;*/
  font-size: 16px;
  color: white;
  background-color: #083D77;
  /* border-color: #820263; */
}

.btn-small {
  /* font-family: Montserrat; */
  padding: 0.4em 1.0em;
  border-radius: 8px;
  font-size: 12px;
  color: white;
  background-color: #820263;
}

.chart {
  width: 800px;
  padding: 50px
}

#area_title {
  font-family: Arial, sans-serif;
  /* Choose a professional font */
  font-size: 32px;
  /* Adjust font size as needed */
  font-weight: bold;
  /* Make it bold */
  text-align: center;
  /* Center align the text */
  margin-top: 50px;
  /* Add space at the top */
  margin-bottom: 30px;
  /* Add space at the bottom */
  color: #333;
  /* Choose a suitable text color */
  text-transform: uppercase;
  /* Transform text to uppercase */
  letter-spacing: 2px;
  /* Add letter spacing for clarity */
  border-bottom: 2px solid #aaa;
  /* Add a bottom border */
  padding-bottom: 5px;
  /* Space between text and border */
}

/* Style for the grid container */
.grid-container {
  /* Use CSS grid */
  display: grid;
  /* Two columns with equal width */
  grid-template-columns: 1fr 1fr 1fr 1fr;
  /* Gap between grid items */
  grid-gap: 10px;
  /* Center the grid items horizontally */
  justify-content: center;
  /* Center the grid items vertically */
  align-items: center;
  padding-left: 50px;
  padding-bottom: 50px;
  width: 800px;
}

.data-box {
  /* Set the width */
  width: 150px;
  /* Set the height */
  height: 100px;
  /* Add padding inside the box */
  padding: 20px;
  /* Add a border */
  border-bottom: 8px solid #083D77;
  border-right: 8px solid #e2e2e2;
  /* Add rounded corners */
  /* border-radius: 8px; */
  /* Set background color */
  background-color: #d4e0f2;
  /* Add a shadow */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  /* font colour */
  color: #333;
  font-family: 'Arial', sans-serif;
  font-size: 20px;
  font-weight: bold;
  /* Use flexbox for arranging elements horizontally */
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.data-content {
  /* Ensure the content aligns correctly */
  display: flex;
  align-items: center;
  text-align: center;
}

.data-title {
  /* Adjust title's width and margin */
  width: 100px;
  margin-right: 10px;
}

.change-value {
  /* Additional styles for the content */
  font-size: 26px;
  color: #000;
}

/* Additional CSS for text color */
.positive {
  color: #355E3B;
}

.negative {
  color: #800000;
}

/* CSS for Arrow */
.arrow-container {
  width: 20px;
  /* Set container width and height to accommodate the arrow */
  height: 20px;
}

.arrow {
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  display: inline-block;
}

/* Red arrow for negative values */
.arrow.negative {
  border-top: 20px solid #800000;
}

/* Green arrow for positive values */
.arrow.positive {
  border-bottom: 20px solid #355e3b;
}


@media (prefers-color-scheme: dark) {
  :root {
    color: #f7f7ff;
    background-color: #242424;
    ;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

